@@ -1,5 +1,7 @@
 17 January 2009
 
+* suspend-client command to suspend a client. Don't try to background it
+  though...
 * tmux 0.6 released.
 
 15 January 2009
@@ -932,7 +934,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.214 2009-01-17 19:08:12 nicm Exp $
+$Id: CHANGES,v 1.215 2009-01-18 12:09:42 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
